--- a/frontpage.html
+++ b/frontpage.html
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <title>Coffee Brewer</title>
     <link rel="stylesheet" href="icofont/icofont.css">
-    <link rel="icon" href="Images/favicon.ico">
-    <link rel="stylesheet" href="css/frontpage.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="frontpage.css">
 </head>
 <body>
  
